MESSAGE(STATUS "CMake baselib")

add_subdirectory(base_code)
add_subdirectory(component)
add_subdirectory(config)
add_subdirectory(core)
add_subdirectory(db_redis)
add_subdirectory(db_mysql)
add_subdirectory(kernel)
add_subdirectory(libloader)
add_subdirectory(log_lib)
add_subdirectory(message)
add_subdirectory(network)
add_subdirectory(http_lib)